java-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      terminationGracePeriodSeconds: 5
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      imagePullSecrets:
      - name: docker-config
      containers:
      - name: java-app-container
        image: ${JAVA_IMG_NAME}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          privileged: false
          readOnlyRootFilesystem: false # security best pratice is true, but tomcat needs to create tmpdir 
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          requests:
            cpu: 150m
            memory: 192Mi
          limits:
            cpu: 250m
            memory: 320Mi
---
apiVersion: v1
kind: Service
metadata:
  name: java-app
  namespace: default
  labels:
    app: java-app
spec:
  type: LoadBalancer
  selector:
    app: java-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    #nodePort: 30001
