nginx-deployment-fargate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: dev-fargate # for fargate
spec:
  selector:
    matchLabels:
      app: nginx
      profile: fargate  # for fargate
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
        profile: fargate  # for fargate
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
