java-app-ingress-linode.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: 143-42-222-249.ip.linodeusercontent.com
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: java-app
              port:
                number: 8080
