java-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: afffdf34e8d5a4003b833440364b52af-783900938.eu-central-1.elb.amazonaws.com
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: java-app
              port:
                number: 8080
